# rhi_sc

./: .gitignore  README.md  meson.build  meson.options
include/: rhi_sc.h
src/: app.cpp
src/backend/dxc/: rhi_sc.cpp
src/backend/shaderc/: rhi_sc.cpp
